# newspace_RAG

./: .gitignore  pyproject.toml
scripts/: anaylze_shit.py  download_all_files.py  see_processed.py  struct_ocr.py  txt_to_document.py
src/: main.py
src/database/: mongodb_client.py  mysql_client.py  redis_client.py
src/model/: app_state.py  config_model.py
src/service/: ocr_all_files.py  ocr_pdf_to_text.py  process_fav_pdf.py  txt_to_document.py  use_deepseek.py
src/services/: ocr_pdf_to_text.py
src/util/: config_util.py  download_file.py  merge.py
tests/: output_single.json  test_database.py  test_download.py  test_ds.py  test_gpu.py  test_markdown.py  test_mongodb.py  test_python.py  test_single.py  test_struct_model.py  test_structrue.py  test_time.py
