[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.0",
    "paddleocr[all]>=3.5.0",
    "paddlepaddle-gpu==3.3.1",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle-cu130" }

[[tool.uv.index]]
name = "paddlepaddle-cu130"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
