[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.0",
    "paddleocr[all]>=3.5.0",
    "paddlepaddle-gpu==3.3.1",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "aiomysql>=0.3.2",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "redis>=7.4.0",
    "tomli-w>=1.2.0",
    "openai>=2.35.1",
    "motor>=3.7.1",
    "apscheduler>=3.11.2",
]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle-cu130" }

[[tool.uv.index]]
name = "paddlepaddle-cu130"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "test_gpu: 测试gpu",
    "pdf_info: 测试pdf",
    "database: 测试所有数据库的连接",
    "get_tags: 调用数据库获取tags",
    "consumer: redis消费者测试",
    "paddle_struct: 测试paddle的struct模型",
    "test_ocr: 测试paddle的ocr模型",
    "test_set: 测试数据库set的差异",
    "test_download: 测试下载",
    "cha: 下载文件的差异",
    "rag:测试转rag",
    "test_deepseek: 测试deepseek",
    "test_mongo: 测试mongo"
]
